docs/references/typescript/1.2.0/interfaces/ServiceType.md
[@openfabr/cdf](../README.md) / [Exports](../modules.md) / ServiceType

# Interface: ServiceType

Interface that represents a typing classification for services.
In particular, it contains a field for deployment instructions for the type of services defined.

## Hierarchy

- [`TypeAware`](TypeAware.md)

- [`SubtypeAware`](SubtypeAware.md)

- [`OptionalIconAware`](OptionalIconAware.md)

- [`OptionalDescAware`](OptionalDescAware.md)

  ↳ **`ServiceType`**

## Table of contents

### Properties

- [deployment](ServiceType.md#deployment)
- [description](ServiceType.md#description)
- [icon](ServiceType.md#icon)
- [subtype](ServiceType.md#subtype)
- [type](ServiceType.md#type)

## Properties

### deployment

• **deployment**: `string`

#### Defined in

[src/lib/metadata.ts:94](https://github.com/openfabr/cdf/blob/e70ef03/core/typescript/src/lib/metadata.ts#L94)

___

### description

• `Optional` **description**: `string`

#### Inherited from

[OptionalDescAware](OptionalDescAware.md).[description](OptionalDescAware.md#description)

#### Defined in

[src/lib/metadata.ts:24](https://github.com/openfabr/cdf/blob/e70ef03/core/typescript/src/lib/metadata.ts#L24)

___

### icon

• `Optional` **icon**: `string`

#### Inherited from

[OptionalIconAware](OptionalIconAware.md).[icon](OptionalIconAware.md#icon)

#### Defined in

[src/lib/metadata.ts:16](https://github.com/openfabr/cdf/blob/e70ef03/core/typescript/src/lib/metadata.ts#L16)

___

### subtype

• `Readonly` **subtype**: `string`

#### Inherited from

[SubtypeAware](SubtypeAware.md).[subtype](SubtypeAware.md#subtype)

#### Defined in

[src/lib/domain.ts:97](https://github.com/openfabr/cdf/blob/e70ef03/core/typescript/src/lib/domain.ts#L97)

___

### type

• `Readonly` **type**: `string`

#### Inherited from

[TypeAware](TypeAware.md).[type](TypeAware.md#type)

#### Defined in

[src/lib/domain.ts:87](https://github.com/openfabr/cdf/blob/e70ef03/core/typescript/src/lib/domain.ts#L87)
